--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "webpack-merge": "^4.1.2"
   },
   "dependencies": {
+    "bootstrap": "^4.1.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2"
   }
