--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   },
   "dependencies": {
     "bootstrap": "^4.1.1",
+    "npm": "^6.1.0",
     "react": "^16.3.2",
     "react-dom": "^16.3.2"
   }
