--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
   "directories": {
     "test": "test"
   },
-  "homepage": "https://povdima.github.io/Drum-Machine",
+  "homepage": "https://povdima.github.io/First-React-App",
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
+    "deploy": "gh-pages -d dist",
     "build": "webpack --config webpack.prod.js",
     "start": "webpack-dev-server --config webpack.dev.js",
     "test": "jest ./test"
